<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">MusicPlayer</string>
    <string name="transition_img_disc" translatable="false">imgDisc</string>
    <string name="transition_img_play" translatable="false">imgPlay</string>

    <string name="play_song_control_next">Next</string>
    <string name="play_song_control_pause">Pause</string>
    <string name="play_song_control_paused">Paused</string>
    <string name="play_song_control_play">Play</string>
    <string name="play_song_control_playing">Playing</string>
    <string name="play_song_control_previous">Previous</string>
    <string name="play_song_control_random">Random</string>
    <string name="play_song_control_random_off">Random off</string>
    <string name="play_song_control_random_on">Random on</string>
    <string name="play_song_control_repeat">Repeat</string>
    <string name="play_song_control_repeat_off">Repeat off</string>
    <string name="play_song_control_repeat_on">Repeat on</string>

    <string name="agree">Agree</string>
    <string name="disagree">Disagree</string>
    <string name="found_new_song">Fond new song</string>
    <string name="need_permission_to_access">Need permission to access music.</string>
    <string name="no_song_found">No song found</string>
    <string name="permission_requirement">Permission requirement</string>
    <string name="search_song">Search song</string>
    <string name="song_search_bar_info">Open project page</string>
    <string name="unknown">\u003c unknown \u003e</string>
    <string name="unsupported_format">Unsupported format</string>
    <string name="press_again_to_exit">Press again to exit</string>
    <string name="cant_open_browser">Can\'t open browser.</string>
</resources>
